# tolkcheck

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  smoke_test.py
backend/alembic/: env.py
backend/alembic/versions/: 49c2a9c9e9ee_initial_schema.py
backend/app/: config.py  database.py  main.py  pipeline.py  worker.py
backend/app/models/: evaluation.py  session.py
backend/app/routers/: evaluations.py  sessions.py
backend/app/services/: diarization.py  feedback.py  scoring.py  transcription.py
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/lib/: api.ts  errors.ts  types.ts
