[project]
name = "tolkcheck-backend"
version = "0.1.0"
description = "AI-powered interpreter quality evaluation for IND sessions"
requires-python = ">=3.12, <3.14"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Config / validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # AI – transcription
    "faster-whisper>=1.1.0",

    # AI – diarization (requires HF token; wraps pyannote internally)
    "whisperx>=3.1.0",

    # AI – semantic scoring
    "sentence-transformers>=3.0.0",

    # AI – LLM feedback (Anthropic SDK with prompt caching)
    "anthropic>=0.40.0",

    # Task queue
    "arq>=0.26.0",

    # Utilities
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false
# torchcodec (pulled in by torchaudio/speechbrain) has no linux/aarch64 wheel.
# Override to skip it on ARM64 Linux so Docker builds succeed on M-series Macs.
override-dependencies = [
    "torchcodec; sys_platform != 'linux' or platform_machine != 'aarch64'",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
